# CodeWiki

./: DEVELOPMENT.md  README.md  index.html  pyproject.toml
codewiki/cli/: config_manager.py
codewiki/cli/adapters/: doc_generator.py
codewiki/cli/commands/: config.py
codewiki/cli/models/: config.py
codewiki/mcp/: server.py
codewiki/src/be/: backend.py  caw_backend.py  caw_toolkit.py  cluster_modules.py  documentation_generator.py  pydantic_ai_backend.py  utils.py
codewiki/src/be/agent_tools/: str_replace_editor.py
docs/: c_analyzer.md  c_analyzer_final.md  c_analyzer_fixed.md  cli_core.md  cli_models.md  cli_utils.md  cpp_analyzer.md  csharp_analyzer.md  csharp_analyzer_fixed.md  csharp_analyzer_v2.md  dependency_analysis_services.md  dependency_analyzer_models.md  dependency_analyzer_utils.md  dependency_graph_construction.md  documentation_generation.md  first_module_tree.json  frontend_models.md  frontend_web_app.md  index.html  java_analyzer.md  javascript_analyzer.md  kotlin_analyzer.md  language_analyzers.md  llm_backends.md  metadata.json  module_tree.json  overview.md  php_analyzer.md  python_analyzer.md  shared_config_and_utils.md  typescript_analyzer.md
docs/temp/dependency_graphs/: CodeWiki_dependency_graph.json
